--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "scripts": {
-    "dev": "NODE_ENV"
+    "dev": "cross-env NODE_ENV=development webpack --progress --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
   }
 }
